// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFnBlockedContent() retrieves metadata about a particular set of describe functions 1`] = `
Object {
  "describe": Array [
    Object {
      "code": "// some code 1
/* eslint-disable-next-line */
describe.only('Nested describe 1', () => {
    it('does this and that', () => {
        // code of what it does
        expect(true).toBeTruthy()
    })
})",
      "describe": Array [
        Object {
          "code": "it('does this and that', () => {
    // code of what it does
    expect(true).toBeTruthy()
})",
          "describe": Array [],
          "end": 7,
          "flag": "only",
          "it": Array [
            Object {
              "code": "",
              "describe": Array [],
              "end": -1,
              "flag": undefined,
              "it": Array [],
              "start": -1,
              "title": "does this and that",
            },
          ],
          "start": 2,
          "title": "Nested describe 1",
        },
      ],
      "end": 9,
      "flag": undefined,
      "it": Array [],
      "start": 0,
      "title": "Some describe title 1",
    },
    Object {
      "code": "// some code 2",
      "describe": Array [],
      "end": 13,
      "flag": undefined,
      "it": Array [],
      "start": 11,
      "title": "Some describe title 2",
    },
    Object {
      "code": "// some code 3",
      "describe": Array [],
      "end": 17,
      "flag": undefined,
      "it": Array [],
      "start": 15,
      "title": "Some describe title 3",
    },
  ],
  "it": Array [
    Object {
      "code": "",
      "describe": Array [],
      "end": -1,
      "flag": undefined,
      "it": Array [],
      "start": -1,
      "title": "one line explicit-return arrow function",
    },
    Object {
      "code": "",
      "describe": Array [],
      "end": -1,
      "flag": undefined,
      "it": Array [],
      "start": -1,
      "title": "one line implicit-return arrow function",
    },
    Object {
      "code": "",
      "describe": Array [],
      "end": -1,
      "flag": undefined,
      "it": Array [],
      "start": -1,
      "title": "multiline implicit-return arrow function",
    },
  ],
}
`;

exports[`parse() retrieves metadata about a jest source 1`] = `
Object {
  "describe": Array [
    Object {
      "code": "// some code 1
/* eslint-disable-next-line */
describe.only('Nested describe 1', () => {
    it('does this and that', () => {
        // code of what it does
        expect(true).toBeTruthy()
    })
})",
      "describe": Array [
        Object {
          "code": "it('does this and that', () => {
    // code of what it does
    expect(true).toBeTruthy()
})",
          "describe": Array [],
          "end": 7,
          "flag": "only",
          "it": Array [
            Object {
              "code": "",
              "describe": Array [],
              "end": -1,
              "flag": undefined,
              "it": Array [],
              "start": -1,
              "test": Array [],
              "title": "does this and that",
            },
          ],
          "start": 2,
          "test": Array [],
          "title": "Nested describe 1",
        },
      ],
      "end": 9,
      "flag": undefined,
      "it": Array [],
      "start": 0,
      "test": Array [],
      "title": "Some describe title 1",
    },
    Object {
      "code": "// some code 2",
      "describe": Array [],
      "end": 13,
      "flag": undefined,
      "it": Array [],
      "start": 11,
      "test": Array [],
      "title": "Some describe title 2",
    },
    Object {
      "code": "// some code 3",
      "describe": Array [],
      "end": 17,
      "flag": undefined,
      "it": Array [],
      "start": 15,
      "test": Array [],
      "title": "Some describe title 3",
    },
  ],
  "it": Array [
    Object {
      "code": "",
      "describe": Array [],
      "end": -1,
      "flag": undefined,
      "it": Array [],
      "start": -1,
      "test": Array [],
      "title": "one line explicit-return arrow function",
    },
    Object {
      "code": "",
      "describe": Array [],
      "end": -1,
      "flag": undefined,
      "it": Array [],
      "start": -1,
      "test": Array [],
      "title": "one line implicit-return arrow function",
    },
    Object {
      "code": "",
      "describe": Array [],
      "end": -1,
      "flag": undefined,
      "it": Array [],
      "start": -1,
      "test": Array [],
      "title": "multiline implicit-return arrow function",
    },
  ],
  "test": Array [],
  "title": "Some jest file",
}
`;
